# tadoku

./: .bazelrc  .env.local.example  .env.sample  .gitignore  BUILD  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  Tiltfile  WORKSPACE  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  go_third_party.bzl  plan.md  tilt_config.json.example  tools.go
.circleci/: config.yml
services/authz-api/: BUILD.bazel  Tiltfile  main.go
services/authz-api/client/ory/: BUILD.bazel  kratos.go
services/authz-api/deployments/: api.yaml
services/authz-api/domain/: BUILD.bazel  allowlist.go  moderationaudit.go  permissioncheck.go  permissioncheck_internal.go  permissioncheck_public.go  permissioncheck_public_test.go  relationshipwrite.go  roleget.go  roleupdate.go  roleupdate_test.go
services/authz-api/http/rest/: BUILD.bazel  errors.go  middleware_internal.go  server.go  server_internal.go  server_permissioncheck.go  server_ping.go  server_roleget.go  server_roleupdate.go
services/blog/: BUILD.bazel  README.md  go.mod  main.go  posts-stub.json
services/blog-api/: BUILD.bazel  README.md  Tiltfile  go.mod  go.sum  main.go  openapi.yaml  posts-stub.json
services/blog-api/deployments/: api.yaml
services/blog-api/domain/pagecreate/: BUILD.bazel  page.go  service.go
services/blog-api/domain/pagefind/: BUILD.bazel
services/blog-api/http/rest/: BUILD.bazel  pages.go  server.go
services/blog/deployments/: BUILD  blog.yaml
services/common/domain/: BUILD.bazel  clock.go  clock_mock.go  clock_mock_test.go  context.go  errors.go  identity.go  role.go  role_test.go  session.go
services/common/health/: BUILD.bazel  handler.go  handler_test.go  health.go
services/common/middleware/: BUILD.bazel  logger.go  optional_auth.go  optional_auth_test.go  role.go  roles.go  session.go  session_test.go
services/common/serviceauth/: BUILD.bazel  claims.go  client.go  generator.go  middleware.go  serviceauth_test.go  validator.go
services/content-api/: BUILD.bazel  README.md  Tiltfile  main.go  manual-stub.json
services/content-api/deployments/: api.yaml
services/content-api/domain/: BUILD.bazel  announcement.go  announcementcreate.go  announcementcreate_test.go  announcementdelete.go  announcementdelete_test.go  announcementfind.go  announcementfind_test.go  announcementlist.go  announcementlist_test.go  announcementlistactive.go  announcementlistactive_test.go  announcementupdate.go  announcementupdate_test.go  authz.go  errors.go  page.go  page_create.go  page_create_test.go  page_find.go  page_find_test.go  page_list.go  page_list_test.go  page_update.go  page_update_test.go  pagecreate.go  pagecreate_test.go  pagedelete.go  pagedelete_test.go  pagefind.go  pagefindbyid.go  pagefindbyid_test.go  pagelist.go  pagelist_test.go  pageupdate.go  pageupdate_test.go  pageversionget.go  pageversionget_test.go  pageversionlist.go  pageversionlist_test.go  (+24 more)
services/discord-ops/: BUILD.bazel  main.go
services/identity-api/app/: BUILD.bazel  interactors.go  repositories.go  server.go  services.go
services/identity-api/domain/: BUILD.bazel  preferences.go  role.go  user_test.go  validate_test.go
services/identity-api/test/: BUILD.bazel  helpers.go
services/identity-api/usecases/: BUILD.bazel  clock_mock.go  error_reporter.go  error_reporter_mock.go  jwt_generator_mock.go  password_hasher.go  password_hasher_mock.go  repositories.go  repositories_mock.go  role_authenticator.go  session_claims.go  session_interactor.go  session_interactor_mock.go  session_interactor_test.go  user_interactor.go  user_interactor_mock.go  user_interactor_test.go  validator_mock.go
services/immersion-api/: BUILD.bazel  README.md  Tiltfile  main.go
services/immersion-api/cache/: BUILD.bazel  usercache.go  usercache_test.go
services/immersion-api/deployments/: BUILD  api.yaml
services/immersion-api/domain/: BUILD.bazel  activities.go  activities_test.go  authz.go  contest_create_test.go  contest_find_test.go  contest_leaderboard_fetch.go  contest_permission_check_test.go  contestconfigurationoptions.go  contestconfigurationoptions_test.go  contestcreate.go  contestcreate_test.go  contestfind.go  contestfind_test.go  contestfindlatestofficial.go  contestfindlatestofficial_test.go  contestleaderboardfetch.go  contestleaderboardfetch_test.go  contestlist.go  contestlist_test.go  contestmoderationdetachlog.go  contestmoderationdetachlog_test.go  contestpermissioncheck.go  contestpermissioncheck_test.go  contestsummaryfetch.go  contestsummaryfetch_test.go  errors.go  interfaces.go  languagecreate.go  languagecreate_test.go  languagelist.go  languagelist_test.go  languageupdate.go  languageupdate_test.go  leaderboard_global.go  leaderboardglobal.go  leaderboardglobal_test.go  leaderboardoutboxworker.go  leaderboardoutboxworker_test.go  leaderboardrank.go  (+70 more)
services/postgres-backup/: BUILD.bazel  backup.sh
services/profile-api/: BUILD.bazel  Tiltfile  main.go
services/profile-api/cache/: BUILD.bazel  usercache.go  usercache_test.go
services/profile-api/deployments/: api.yaml
services/profile-api/domain/: BUILD.bazel  authz.go  errors.go  interfaces.go  models.go  roles_context_test.go  userlist.go  userlist_test.go
services/reading-contest-api/app/: BUILD.bazel  interactors.go  repositories.go  server.go  services.go
services/reading-contest-api/infra/: BUILD.bazel  context.go  error_reporter.go  govalidate.go  rdb.go  router.go  router_test.go  sql.go  validator.go
services/reading-contest-api/test/: BUILD.bazel  helpers.go
services/reading-contest-api/usecases/: BUILD.bazel  contest_interactor.go  contest_interactor_mock.go  contest_interactor_test.go  ranking_interactor.go  ranking_interactor_mock.go  ranking_interactor_test.go  repositories.go  repositories_mock.go  role_authenticator.go  session_claims.go  session_interactor_mock.go
services/redirect-naked-domain/: BUILD.bazel  README.md  go.mod  main.go  main_test.go
services/token-reflector/: BUILD.bazel  Tiltfile  main.go
services/token-reflector/deployments/: api.yaml
(+1536 files in other folders)
