module(
    name = "tadoku",
    version = "1.0.0",
)

# Golang

bazel_dep(name = "rules_go", version = "0.54.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")

## Go version
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

## Read deps from go.mod
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

## All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(go_deps)

# Packaging

bazel_dep(name = "rules_pkg", version = "1.1.0")

# Containers

bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
    ],
)
oci.pull(
    name = "migrate_docker",
    image = "index.docker.io/migrate/migrate",
    tag = "4",
)
use_repo(oci, "migrate_docker", "distroless_base", "distroless_base_linux_amd64")