module(
    name = "tadoku",
    version = "1.0.0",
)

# Golang

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.36.0")

## Go version
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

## Read deps from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

## All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_bwmarrin_discordgo",
    "com_github_deepmap_oapi_codegen",
    "com_github_getsentry_sentry_go",
    "com_github_go_playground_validator_v10",
    "com_github_golang_jwt_jwt",
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_uuid",
    "com_github_jackc_pgconn",
    "com_github_jackc_pgerrcode",
    "com_github_jackc_pgx_v4",
    "com_github_kelseyhightower_envconfig",
    "com_github_labstack_echo_v4",
    "com_github_lib_pq",
    "com_github_micahparks_keyfunc",
    "com_github_ory_keto_client_go",
    "com_github_ory_kratos_client_go",
    "com_github_pkg_errors",
    "com_github_sahilm_fuzzy",
    "com_github_stretchr_testify",
    "com_github_valkey_io_valkey_go",
    "org_golang_x_sync",
)

# Packaging

bazel_dep(name = "rules_pkg", version = "1.1.0")

# Containers

bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:27769871031f67460f1545a52dfacead6d18a9f197db77110cfc649ca2a91f44",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
    ],
)
oci.pull(
    name = "go_migrate",
    image = "index.docker.io/migrate/migrate",
    platforms = [
        "linux/amd64",
    ],
    tag = "4",
)
use_repo(
    oci,
    "distroless_base",
    "distroless_base_linux_amd64",
    "go_migrate",
    "go_migrate_linux_amd64",
)
