load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:build/oapi-codegen.bzl", "oapi_codegen")

go_library(
    name = "blog_api_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "posts-stub.json",
        "manual-stub.json",
    ],
    importpath = "github.com/tadoku/tadoku/services/blog-api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "blog_api",
    embed = [":blog_api_lib"],
    visibility = ["//visibility:public"],
)

# OpenAPI
oapi_codegen(
    name = "api",
    out = "http/rest/openapi/api.gen.go",
    generate = [
        "types",
        "server",
    ],
    package = "main",
    spec = "openapi.yaml",
    visibility = ["//services/blog-api/__pkg__"],
)

# Docker image
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_image(
    name = "base_image",
    embed = [":blog_api_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base_image",
    stamp = True,
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "tadoku/tadoku/blog-api",
    skip_unchanged_digest = True,
)
