load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "content-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/content-api",
    visibility = ["//visibility:private"],
    deps = [
        "//services/common/domain",
        "//services/common/middleware",
        "//services/common/storage/memory",
        "//services/content-api/domain/pagecommand",
        "//services/content-api/domain/pagequery",
        "//services/content-api/domain/postcommand",
        "//services/content-api/domain/postquery",
        "//services/content-api/http/rest",
        "//services/content-api/http/rest/openapi",
        "//services/content-api/storage/postgres",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "content-api",
    embed = [":content-api_lib"],
    visibility = ["//visibility:public"],
)
