load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "discord-ops_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/discord-ops",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_kelseyhightower_envconfig//:envconfig",
    ],
)

go_binary(
    name = "discord-ops",
    embed = [":discord-ops_lib"],
    visibility = ["//visibility:public"],
)
