load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "immersion-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/immersion-api",
    visibility = ["//visibility:private"],
    deps = [
        "//services/common/domain",
        "//services/common/middleware",
        "//services/common/storage/memory",
        "//services/immersion-api/client/ory",
        "//services/immersion-api/domain/command",
        "//services/immersion-api/domain/query",
        "//services/immersion-api/http/rest",
        "//services/immersion-api/http/rest/openapi",
        "//services/immersion-api/storage/postgres/repository",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "immersion-api",
    embed = [":immersion-api_lib"],
    visibility = ["//visibility:public"],
)
