load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "immersion-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/immersion-api",
    visibility = ["//visibility:private"],
    deps = [
        "//services/common/authz/roles",
        "//services/common/client/keto",
        "//services/common/domain",
        "//services/common/health",
        "//services/common/middleware",
        "//services/immersion-api/client/ory",
        "//services/immersion-api/domain",
        "//services/immersion-api/http/rest",
        "//services/immersion-api/http/rest/openapi",
        "//services/immersion-api/storage/postgres/repository",
        "//services/immersion-api/storage/valkey",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_valkey_io_valkey_go//:valkey-go",
    ],
)

go_binary(
    name = "immersion-api",
    embed = [":immersion-api_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app_layer",
    srcs = [":immersion-api"],
)

oci_image(
    name = "image",
    # This is defined by an oci.pull() call in /MODULE.bazel
    base = "@distroless_base_linux_amd64",
    entrypoint = ["/immersion-api"],
    tars = [":app_layer"],
)

oci_load(
    name = "load",
    # Use the image built for the target platform
    image = ":image",
    repo_tags = [
        "ghcr.io/tadoku/tadoku/immersion-api:latest",
        "bazel/services/immersion-api:latest",
    ],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/tadoku/tadoku/immersion-api",
)
