load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_extract")

# Extract AWS client
container_image(
  name = "postgres",
  base = "@postgres//image",
  entrypoint = None,
)
container_run_and_extract(
    name = "extract_pg_dumpall",
    image = ":postgres.tar",
    commands=["cp /usr/bin/pg_dumpall /pg_dumpall"],
    extract_file = "/pg_dumpall",
)

container_image(
  name = "image",
  base = "@aws-cli//image",
  files = [
      "backup.sh",
      "extract_pg_dumpall/pg_dumpall",
  ],
  # tars = [
  #   ":aws-cli-bin",
  # ],
  entrypoint = ["/backup.sh"],
)
