load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "profile-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/profile-api",
    visibility = ["//visibility:private"],
    deps = [
        "//services/common/middleware",
        "//services/common/storage/memory",
        "//services/profile-api/http/rest",
        "//services/profile-api/http/rest/openapi",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "profile-api",
    embed = [":profile-api_lib"],
    visibility = ["//visibility:public"],
)
