load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "redirect-naked-domain_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/redirect-naked-domain",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "redirect-naked-domain",
    embed = [":redirect-naked-domain_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "redirect-naked-domain_test",
    srcs = ["main_test.go"],
    embed = [":redirect-naked-domain_lib"],
)
