load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "redirect-naked-domain_lib",
    srcs = ["main.go"],
    importpath = "github.com/tadoku/tadoku/services/redirect-naked-domain",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "redirect-naked-domain",
    embed = [":redirect-naked-domain_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "redirect-naked-domain_test",
    srcs = ["main_test.go"],
    embed = [":redirect-naked-domain_lib"],
)

# Docker image
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_image(
    name = "base_image",
    embed = [":redirect-naked-domain_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base_image",
    stamp = True,
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "tadoku/tadoku/redirect-naked-domain",
    skip_unchanged_digest = True,
)
