load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = glob(["*.go"], exclude = ["*_test.go"]),
    importpath = "github.com/tadoku/tadoku/services/authz-api/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/authz/roles",
        "//services/common/client/keto",
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "domain_test",
    srcs = glob(["*_test.go"]),
    deps = [
        ":domain",
        "//services/common/authz/roles",
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
