load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "logger.go",
        "optional_auth.go",
        "roles.go",
        "session.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/common/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/authz/roles",
        "//services/common/domain",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_micahparks_keyfunc//:keyfunc",
    ],
)

go_test(
    name = "middleware_test",
    srcs = [
        "optional_auth_test.go",
        "session_test.go",
    ],
    embed = [":middleware"],
    deps = [
        "//services/common/authz/roles",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
