load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "errors.go",
        "page.go",
        "pagecreate.go",
        "pagedelete.go",
        "pagefind.go",
        "pagelist.go",
        "pageupdate.go",
        "pageversions.go",
        "post.go",
        "postcreate.go",
        "postdelete.go",
        "postfind.go",
        "postlist.go",
        "postupdate.go",
        "postversions.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/content-api/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/domain",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "domain_test",
    srcs = [
        "pagecreate_test.go",
        "pagefind_test.go",
        "pagelist_test.go",
        "pageupdate_test.go",
        "postcreate_test.go",
        "postfind_test.go",
        "postlist_test.go",
        "postupdate_test.go",
    ],
    deps = [
        ":domain",
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
