load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "announcement.go",
        "announcementcreate.go",
        "announcementdelete.go",
        "announcementfind.go",
        "announcementlist.go",
        "announcementlistactive.go",
        "announcementupdate.go",
        "errors.go",
        "page.go",
        "pagecreate.go",
        "pagedelete.go",
        "pagefind.go",
        "pagefindbyid.go",
        "pagelist.go",
        "pageupdate.go",
        "pageversionget.go",
        "pageversionlist.go",
        "post.go",
        "postcreate.go",
        "postdelete.go",
        "postfind.go",
        "postfindbyid.go",
        "postlist.go",
        "postupdate.go",
        "postversionget.go",
        "postversionlist.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/content-api/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/domain",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "domain_test",
    srcs = [
        "announcementcreate_test.go",
        "announcementdelete_test.go",
        "announcementfind_test.go",
        "announcementlist_test.go",
        "announcementlistactive_test.go",
        "announcementupdate_test.go",
        "pagecreate_test.go",
        "pagedelete_test.go",
        "pagefind_test.go",
        "pagefindbyid_test.go",
        "pagelist_test.go",
        "pageupdate_test.go",
        "pageversionget_test.go",
        "pageversionlist_test.go",
        "postcreate_test.go",
        "postdelete_test.go",
        "postfind_test.go",
        "postfindbyid_test.go",
        "postlist_test.go",
        "postupdate_test.go",
        "postversionget_test.go",
        "postversionlist_test.go",
    ],
    deps = [
        ":domain",
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
