load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "interactors.go",
        "repositories.go",
        "server.go",
        "services.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/identity-api/app",
    visibility = ["//visibility:public"],
    deps = [
        "//services/identity-api/domain",
        "//services/identity-api/infra",
        "//services/identity-api/interfaces/rdb",
        "//services/identity-api/interfaces/repositories",
        "//services/identity-api/interfaces/services",
        "//services/identity-api/usecases",
        "@com_github_creasty_configo//:configo",
    ],
)
